--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -7,8 +7,8 @@
 <h1>User Profile</h1>
 <br>
 <p>Username: <span th:text="${user.username}"></span></p>
-<p>First name: <span th:text="${user.first_name}"></span></p>
-<p>Last name: <span th:text="${user.last_name}"></span></p>
+<p>First name: <span th:text="${user.firstName}"></span></p>
+<p>Last name: <span th:text="${user.lastName}"></span></p>
 <p>Email: <span th:text="${user.email}"></span></p>
 
 
