--- a/src/main/resources/templates/edit_user.html
+++ b/src/main/resources/templates/edit_user.html
@@ -10,7 +10,7 @@
 <br>
 <br>
 
-<form th:action="@{/editUser}" th:object="${user}" method="post">
+<form th:action="@{/admin/editUser}" th:object="${user}" method="post">
     <input type="hidden" th:field="*{id}" />
     <div>
         <label for="username">Username:</label>
@@ -26,11 +26,11 @@
     </div>
     <div>
         <label for="first_name">First_name:</label>
-        <input type="text" id="first_name" th:field="*{first_name}" required />
+        <input type="text" id="first_name" th:field="*{firstName}" required />
     </div>
     <div>
         <label for="last_name">Last_name:</label>
-        <input type="text" id="last_name" th:field="*{last_name}" required />
+        <input type="text" id="last_name" th:field="*{lastName}" required />
     </div>
     <div>
         <label for="email">Email:</label>
@@ -38,8 +38,8 @@
     </div>
     <br>
     <div>
-        <label for="role">Roles:</label>
-        <select id="role" name="role" multiple>
+        <label for="roleIds">Roles:</label>
+        <select id="roleIds" name="roleIds" multiple>
             <option th:each="role : ${allRoles}" th:value="${role.id}" th:text="${role.name}"></option>
         </select>
     </div>
