--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -22,12 +22,12 @@
 
     <div>
         <label for="first_name">First_name:</label>
-        <input type="text" id="first_name" th:field="*{first_name}" required />
+        <input type="text" id="first_name" th:field="*{firstName}" required />
     </div>
 
     <div>
         <label for="last_name">Last_name:</label>
-        <input type="text" id="last_name" th:field="*{last_name}" required />
+        <input type="text" id="last_name" th:field="*{lastName}" required />
     </div>
     <div>
         <label for="email">Email:</label>
