--- a/src/main/resources/templates/edit_user.html
+++ b/src/main/resources/templates/edit_user.html
@@ -11,40 +11,59 @@
 <br>
 
 <form th:action="@{/admin/editUser}" th:object="${user}" method="post">
-    <input type="hidden" th:field="*{id}" />
+    <input type="hidden" th:field="*{id}"/>
+
     <div>
         <label for="username">Username:</label>
-        <input type="text" id="username" th:field="*{username}" required />
+        <input type="text" id="username" th:field="*{username}" required/>
     </div>
+
     <div>
         <label for="password">Password:</label>
-        <input type="password" id="password" th:field="*{password}" required />
+        <input type="password" id="password" th:field="*{password}"
+               placeholder="Leave empty to keep current"/>
     </div>
+
     <div>
         <label for="enabled">Enabled:</label>
-        <input type="text" id="enabled" th:field="*{enabled}" required />
+        <select id="enabled" th:field="*{enabled}">
+            <option value="true">Yes</option>
+            <option value="false">No</option>
+        </select>
     </div>
+
     <div>
-        <label for="first_name">First_name:</label>
-        <input type="text" id="first_name" th:field="*{firstName}" required />
+        <label for="firstName">First name:</label>
+        <input type="text" id="firstName" th:field="*{firstName}" required/>
     </div>
+
     <div>
-        <label for="last_name">Last_name:</label>
-        <input type="text" id="last_name" th:field="*{lastName}" required />
+        <label for="lastName">Last name:</label>
+        <input type="text" id="lastName" th:field="*{lastName}" required/>
     </div>
+
+    <div>
+        <label for="age">Age:</label>
+        <input type="number" id="age" th:field="*{age}" required/>
+    </div>
+
     <div>
         <label for="email">Email:</label>
-        <input type="email" id="email" th:field="*{email}" required />
+        <input type="email" id="email" th:field="*{email}" required/>
     </div>
-    <br>
+
     <div>
         <label for="roleIds">Roles:</label>
         <select id="roleIds" name="roleIds" multiple>
-            <option th:each="role : ${allRoles}" th:value="${role.id}" th:text="${role.name}"></option>
+            <option th:each="role : ${allRoles}"
+                    th:value="${role.id}"
+                    th:text="${role.name}"
+                    th:selected="${user.roles.contains(role)}">
+            </option>
         </select>
     </div>
-    <br>
-    <button type="submit">update user</button>
+
+    <button type="submit">Update User</button>
 </form>
 <br>
 <form th:action="@{/logout}" method="post">
