--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -17,7 +17,10 @@
 
     <div>
         <label for="enabled">Enabled:</label>
-        <input type="text" id="enabled" th:field="*{enabled}" required />
+        <select id="enabled" th:field="*{enabled}">
+            <option value="true">Yes</option>
+            <option value="false">No</option>
+        </select>
     </div>
 
     <div>
@@ -29,6 +32,12 @@
         <label for="last_name">Last_name:</label>
         <input type="text" id="last_name" th:field="*{lastName}" required />
     </div>
+
+    <div>
+        <label for="age">Age:</label>
+        <input type="number" id="age" th:field="*{age}" required />
+    </div>
+
     <div>
         <label for="email">Email:</label>
         <input type="email" id="email" th:field="*{email}" required />
