--- a/src/main/resources/templates/showAllUsers.html
+++ b/src/main/resources/templates/showAllUsers.html
@@ -15,6 +15,7 @@
             <th>Username</th>
             <th>First_name</th>
             <th>Last_name</th>
+            <th>Age</th>
             <th>Email</th>
             <th>Enabled</th>
             <th>Password</th>
@@ -26,6 +27,7 @@
             <td th:text="${usr.username}">...</td>
             <td th:text="${usr.firstName}">...</td>
             <td th:text="${usr.lastName}">...</td>
+            <td th:text="${usr.age}">...</td>
             <td th:text="${usr.email}">...</td>
             <td th:text="${usr.enabled}">...</td>
             <td th:text="${usr.password}">...</td>
