--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,22 +1,154 @@
 <!DOCTYPE html>
-<html xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3" lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <title>Spring Security Example</title>
+    <meta charset="UTF-8">
+    <title>User page</title>
+    <link rel="icon" type="image/x-icon" th:href="@{/favicon.ico}">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <style>
+        .menu {
+            background-color: #ffffff;
+            width: 200px;
+            height: 100vh;
+            position: fixed;
+            left: 0;
+            z-index: 1000;
+            top: 70px; /* Учитываем высоту navbar, чтобы поместить меню под ним */
+        }
+
+        .container-main {
+            margin-left: 220px; /* Учитываем ширину меню */
+            margin-right: 20px; /* Добавляем отступ справа */
+            padding-top: 76px; /* Учитываем высоту навигационной панели и отступ для меню */
+        }
+
+        .navbar-brand {
+            margin-right: auto;
+        }
+
+        .menu-btn {
+            background-color: transparent;
+            border: none;
+            color: #057AFB; /* Цвет текста по умолчанию */
+            cursor: pointer;
+            transition: background-color 0.3s, color 0.3s; /* Анимация изменения цвета текста */
+            width: 100%;
+            height: 50px;
+            margin-bottom: 10px;
+            text-align: left; /* Выравнивание текста слева */
+            line-height: 50px;
+            padding-left: 20px; /* Отступ текста слева */
+            border-radius: 4px 4px 4px 4px
+        }
+
+        .menu-btn:hover {
+            background-color: #057AFB; /* Цвет фона при наведении */
+            color: white; /* Цвет текста при наведении */
+        }
+
+        .col-constructor-name {
+            font-size: 16px;
+        }
+
+        /* Стили для рамки вокруг заголовка и соединения с таблицей */
+        .about-user-header {
+            border: 1px solid #ccc;
+            border-bottom: none; /* Убираем нижнюю границу, чтобы соединить с таблицей */
+            background-color: #f8f9fa; /* Светло-серый фон */
+            padding: 15px;
+            margin-bottom: 0; /* Убираем отступ снизу */
+        }
+
+        .table-container {
+            border: 1px solid #ccc;
+            background-color: #fff;
+            padding: 15px;
+            margin-top: 0; /* Убираем отступ сверху */
+        }
+    </style>
 </head>
-<body>
-<h1>User Profile</h1>
-<br>
-<p>Username: <span th:text="${user.username}"></span></p>
-<p>First name: <span th:text="${user.firstName}"></span></p>
-<p>Last name: <span th:text="${user.lastName}"></span></p>
-<p>Email: <span th:text="${user.email}"></span></p>
+<body style="background-color: #f8f9fa;">
 
+<nav class="navbar navbar-dark bg-dark fixed-top">
+    <a class="navbar-brand ml-5" style="color: white; font-family: 'Roboto', sans-serif; font-size: 20px;">
+        <span th:text="${user.email}" class="font-weight-bold"></span>
+        <span> with roles: </span>
+        <span th:each="role : ${user.roles}" th:text="${role.name} + ' '"></span>
+    </a>
+    <form th:action="@{/logout}" th:method="POST" class="d-inline">
+        <button class="btn btn-link text-secondary font-size-20" type="submit">Logout</button>
+    </form>
+</nav>
 
-<br>
-<form th:action="@{/logout}" method="post">
-    <input type="submit" value="Sign Out"/>
-</form>
+<div class="menu">
+    <!-- Кнопка "Admin" ТОЛЬКО для ROLE_ADMIN -->
+    <div sec:authorize="hasRole('ADMIN')">
+        <a th:href="@{'/admin'}">
+            <button class="menu-btn">
+                Admin
+            </button>
+        </a>
+    </div>
 
+    <!-- Кнопка "User" ТОЛЬКО для ROLE_USER -->
+    <div sec:authorize="hasAnyRole('USER','ADMIN')">
+        <a th:href="@{'/user'}">
+            <button class="menu-btn" style="background-color: #057AFB; color: white;">
+                User
+            </button>
+        </a>
+    </div>
+</div>
 
+<div class="container-main">
+    <div>
+        <h1>User information-page</h1>
+        <br>
+        <div class="tab-content" id="myTabContent">
+            <div class="about-user-header">
+                <h4>About user</h4>
+            </div>
+            <div class="table-container">
+                <table class="table table-hover table-striped"
+                       style="background-color: white; width: 100%; font-size: 14px;">
+                    <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Username</th>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Age</th>
+                        <th>Email</th>
+                        <th>Role</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td th:text="${user.id}" class="font-weight-bold"></td>
+                        <td th:text="${user.username}" class="font-weight-bold"></td>
+                        <td th:text="${user.firstName}" class="font-weight-bold"></td>
+                        <td th:text="${user.lastName}" class="font-weight-bold"></td>
+                        <td th:text="${user.age}" class="font-weight-bold"></td>
+                        <td th:text="${user.email}" class="font-weight-bold"></td>
+                        <td th:each="role : ${user.roles}" th:text="${role.name}" class="font-weight-bold"></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
