--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,60 +1,100 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Register</title>
+    <meta charset="UTF-8">
+    <title>Id User</title>
+    <link rel="icon" type="image/x-icon" th:href="@{/favicon.ico}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-<h1>Register</h1>
-<form th:action="@{/register}" method="post" th:object="${user}">
-    <div>
-        <label for="username">Username:</label>
-        <input type="text" id="username" th:field="*{username}" required />
-    </div>
-    <div>
-        <label for="password">Password:</label>
-        <input type="password" id="password" th:field="*{password}" required />
-    </div>
+<new>
+    <br>
+    <h4 style="margin-left: 20px;">Add new user</h4>
+    <div class="table-container" style="border: 1px solid #ccc;  background-color: #fff;">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-4">
+                    <form role="form" class="form-horizontal" th:method="POST" th:action="@{/register}" th:object="${user}">
+                        <div class="form-group text-center">
+                            <label for="username" class="control-label font-weight-bold">Username</label>
+                            <input type="text" class="form-control" placeholder="Username" aria-label="Username"
+                                   th:field="*{username}" id="username">
+                            <small class="text-danger" th:if="${#fields.hasErrors('username')}"
+                                   th:errors="*{username}"></small>
+                        </div>
 
-    <div>
-        <label for="enabled">Enabled:</label>
-        <select id="enabled" th:field="*{enabled}">
-            <option value="true">Yes</option>
-            <option value="false">No</option>
-        </select>
-    </div>
+                        <div class="form-group text-center">
+                            <label for="password" class="control-label font-weight-bold">Password</label>
+                            <input type="password" class="form-control" placeholder="Password" aria-label="Password"
+                                   th:field="*{password}" id="password">
+                            <small class="text-danger" th:if="${#fields.hasErrors('password')}"
+                                   th:errors="*{password}"></small>
+                        </div>
 
-    <div>
-        <label for="first_name">First_name:</label>
-        <input type="text" id="first_name" th:field="*{firstName}" required />
-    </div>
+                        <div class="form-group text-center">
+                            <label for="enabled" class="control-label font-weight-bold">Enabled</label>
+                            <select class="form-control" th:field="*{enabled}" id="enabled">
+                                <option value="true">Yes</option>
+                                <option value="false">No</option>
+                            </select>
+                            <small class="text-danger" th:if="${#fields.hasErrors('enabled')}" th:errors="*{enabled}"></small>
+                        </div>
 
-    <div>
-        <label for="last_name">Last_name:</label>
-        <input type="text" id="last_name" th:field="*{lastName}" required />
-    </div>
+                        <div class="form-group text-center">
+                            <label for="firstName" class="control-label font-weight-bold">First Name</label>
+                            <input type="text" class="form-control" placeholder="First Name" aria-label="First Name"
+                                   th:field="*{firstName}" id="firstName">
+                            <small class="text-danger" th:if="${#fields.hasErrors('firstName')}"
+                                   th:errors="*{firstName}"></small>
+                        </div>
 
-    <div>
-        <label for="age">Age:</label>
-        <input type="number" id="age" th:field="*{age}" required />
-    </div>
+                        <div class="form-group text-center">
+                            <label for="lastName" class="control-label font-weight-bold">Last Name</label>
+                            <input type="text" class="form-control" placeholder="Last Name" aria-label="Last Name"
+                                   th:field="*{lastName}" id="lastName">
+                            <small class="text-danger" th:if="${#fields.hasErrors('lastName')}"
+                                   th:errors="*{lastName}"></small>
+                        </div>
 
-    <div>
-        <label for="email">Email:</label>
-        <input type="email" id="email" th:field="*{email}" required />
-    </div>
+                        <div class="form-group text-center">
+                            <label for="age" class="control-label font-weight-bold">Age</label>
+                            <input type="number" class="form-control" placeholder="Age" aria-label="Age"
+                                   th:field="*{age}" id="age">
+                            <small class="text-danger" th:if="${#fields.hasErrors('age')}"
+                                   th:errors="*{age}"></small>
+                        </div>
 
-    <div>
-        <label for="roles">Roles:</label>
-        <select id="roles" th:field="*{roles}" multiple>
-            <option th:each="role : ${allRoles}" th:value="${role.id}" th:text="${role.name}"></option>
-        </select>
-    </div>
-    <button type="submit">Register</button>
-</form>
-<br>
-<form th:action="@{/logout}" method="post">
-    <input type="submit" value="Sign Out"/>
-</form>
+                        <div class="form-group text-center">
+                            <label for="email" class="control-label font-weight-bold">Email</label>
+                            <input type="email" class="form-control" placeholder="Email" aria-label="Email"
+                                   th:field="*{email}" id="email">
+                            <small class="text-danger" th:if="${#fields.hasErrors('email')}"
+                                   th:errors="*{email}"></small>
+                        </div>
 
+                        <div class="form-group text-center">
+                            <label for="roleIds" class="control-label font-weight-bold">Roles</label>
+                            <select class="form-control" multiple th:field="*{roles}" id="roleIds">
+                                <option th:each="role : ${allRoles}" th:value="${role.id}" th:text="${role.name}"></option>
+                            </select>
+                            <small class="text-danger" th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}"></small>
+                        </div>
+
+                        <div>
+                            <button type="submit" class="btn btn-success btn-lg d-block mx-auto" style="margin-bottom: 40px;">
+                                Register
+                            </button>
+                            <div th:if="${param.error}" style="color: red">
+                                ERRRRRR
+                            </div>
+                        </div>
+
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</new>
 </body>
 </html>
