--- a/src/main/resources/templates/showAllUsers.html
+++ b/src/main/resources/templates/showAllUsers.html
@@ -1,64 +1,301 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml"
+      lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>ADMIN PANEL</title>
+    <link rel="icon" type="image/x-icon" th:href="@{/favicon.ico}">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <style>
+        .menu {
+            background-color: white;
+            width: 200px;
+            height: 100vh;
+            position: fixed;
+            left: 0;
+            z-index: 1000;
+            top: 70px; /* Учитываем высоту navbar, чтобы поместить меню под ним */
+        }
+
+        .container-main {
+            margin-left: 220px; /* Учитываем ширину меню */
+            margin-right: 20px; /* Добавляем отступ справа */
+            padding-top: 76px; /* Учитываем высоту навигационной панели и отступ для меню */
+        }
+
+        .menu-btn {
+            background-color: transparent;
+            border: none;
+            color: #057AFB; /* Цвет текста по умолчанию */
+            cursor: pointer;
+            transition: background-color 0.3s, color 0.3s; /* Анимация изменения цвета текста */
+            width: 100%;
+            height: 50px;
+            margin-bottom: 10px;
+            text-align: left; /* Выравнивание текста слева */
+            line-height: 50px;
+            padding-left: 20px; /* Отступ текста слева */
+            border-radius: 4px 4px 4px 4px
+        }
+
+        .table-container {
+            max-height: 1000px; /* Замените это значение на желаемую максимальную высоту */
+            overflow-y: auto; /* Добавляет вертикальную прокрутку, если контент превышает высоту */
+        }
+
+        .menu-btn:hover {
+            background-color: #057AFB; /* Цвет фона при наведении */
+            color: white; /* Цвет текста при наведении */
+        }
+
+        .col-constructor-name {
+            font-size: 16px;
+        }
+    </style>
 </head>
-<body>
-<h2>All Users List</h2>
-<br>
-<br>
-<div>
-    <table th:border="3">
-        <tr>
-            <th>Id</th>
-            <th>Username</th>
-            <th>First_name</th>
-            <th>Last_name</th>
-            <th>Age</th>
-            <th>Email</th>
-            <th>Enabled</th>
-            <th>Password</th>
-            <th>Operations</th>
-        </tr>
-        <tr th:each="usr : ${allUser}">
+<body style="background-color: #f8f9fa;">
 
-            <td th:text="${usr.id}">...</td>
-            <td th:text="${usr.username}">...</td>
-            <td th:text="${usr.firstName}">...</td>
-            <td th:text="${usr.lastName}">...</td>
-            <td th:text="${usr.age}">...</td>
-            <td th:text="${usr.email}">...</td>
-            <td th:text="${usr.enabled}">...</td>
-            <td th:text="${usr.password}">...</td>
-            <td>
-                <form th:action="@{/admin/editUser}">
-                    <button type="submit" th:name="id" th:value="${usr.id}">Update</button>
-                </form>
-
-                <form th:action="@{/admin/deleteUser}" method="post">
-                    <input type="hidden" name="id" th:value="${usr.id}" />
-                    <button type="submit" class="btn btn-danger">Delete</button>
-                </form>
-            </td>
-        </tr>
-    </table>
-    <br>
-    <input type="button" value="Registration" onclick="window.location.href='/register'">
-    <br>
-    <br><br>
-    <input type="button" value="User page" onclick="window.location.href='/user'">
-    <br>
-    <form th:action="@{/addRole}">
-        <button type="submit" th:name="id" th:value="${id}">Add role</button>
+<nav class="navbar navbar-dark bg-dark fixed-top">
+    <a class="navbar-brand ml-5" style="color: white; font-family: 'Roboto', sans-serif; font-size: 20px;">
+        <span th:text="${currentUser.email}" class="font-weight-bold"></span>
+        <span> with roles: </span>
+        <span th:each="role : ${currentUser.roles}" th:text="${role.name} + ' '"></span>
+    </a>
+    <form th:action="@{/logout}" th:method="POST" class="d-inline">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+        <button class="btn btn-link text-secondary font-size-20" type="submit">Logout</button>
     </form>
-    <br>
+</nav>
 
+<div class="menu">
+    <!-- Кнопка "Admin" ТОЛЬКО для ROLE_ADMIN -->
+    <div sec:authorize="hasRole('ADMIN')">
+        <a th:href="@{'/admin'}">
+            <button class="menu-btn">
+                Admin
+            </button>
+        </a>
+    </div>
+
+    <!-- Кнопка "User" ТОЛЬКО для ROLE_USER -->
+    <div sec:authorize="hasAnyRole('USER','ADMIN')">
+        <a th:href="@{'/user'}">
+            <button class="menu-btn" style="background-color: #057AFB; color: white;">
+                User
+            </button>
+        </a>
+    </div>
 </div>
-<br>
-<form th:action="@{/logout}" method="post">
-    <input type="submit" value="Sign Out"/>
-</form>
+
+<div class="container-main">
+    <div>
+        <h1>Admin panel</h1>
+
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active" id="users-tab" data-toggle="tab" href="#users" role="tab" aria-controls="users" aria-selected="true">Users</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="newuser-tab" data-toggle="tab" href="#newuser" role="tab" aria-controls="newuser" aria-selected="false">New User</a>
+            </li>
+        </ul>
+
+        <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="users" role="tabpanel" aria-labelledby="users-tab">
+                <div style="margin-left: 20px">
+                    <h4> All users</h4>
+                </div>
+
+                <div class="table-container"
+                     style="border: 1px solid #ccc;  background-color: #fff; padding: 15px; overflow-y: auto;">
+                    <table class="table table-hover table-striped"
+                           style="background-color: white; width: 100%; font-size: 14px;">
+                        <thead>
+                        <tr>
+                            <th class="col-constructor-name">ID</th>
+                            <th class="col-constructor-name">Username</th>
+                            <th class="col-constructor-name">First Name</th>
+                            <th class="col-constructor-name">Last Name</th>
+                            <th class="col-constructor-name">Age</th>
+                            <th class="col-constructor-name">Email</th>
+                            <th class="col-constructor-name">Enabled</th>
+                            <th class="col-constructor-name">Roles</th>
+                            <th class="col-constructor-name">Operations</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="user : ${allUser}">
+                            <td th:text="${user.id}">...</td>
+                            <td th:text="${user.username}">...</td>
+                            <td th:text="${user.firstName}">...</td>
+                            <td th:text="${user.lastName}">...</td>
+                            <td th:text="${user.age}">...</td>
+                            <td th:text="${user.email}">...</td>
+                            <td th:text="${user.enabled}">...</td>
+                            <td th:each="role : ${user.roles}" th:text="${role.name}">...</td>
+                            <td>
+                                <!-- Кнопка "Update" с открытием модального окна -->
+                                <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" th:attr="data-target='#updateModal' + ${user.id}">
+                                    Update
+                                </button>
+
+                                <!-- Кнопка "Delete" с открытием модального окна -->
+                                <button type="button" class="btn btn-danger btn-sm" data-toggle="modal" th:attr="data-target='#deleteModal' + ${user.id}">
+                                    Delete
+                                </button>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="tab-pane fade" id="newuser" role="tabpanel" aria-labelledby="newuser-tab">
+                <div th:replace="~{admin/new :: new}"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div th:each="user : ${allUser}">
+    <!-- Модальное окно для Update -->
+    <div th:id="'updateModal' + ${user.id}" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-md" role="document">
+            <div class="modal-content">
+                <div class="modal-header d-flex justify-content-between">
+                    <h4 class="modal-title">Edit User</h4>
+                    <button type="button" class="close btn-close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form th:action="@{/admin/editUser}" method="post">
+                        <input type="hidden" name="id" th:value="${user.id}" />
+                        <div class="row">
+                            <div class="col-md-8 mx-auto">
+                                <div class="form-group text-center">
+                                    <label th:attr="for='username' + ${user.id}" class="control-label font-weight-bold">Username</label>
+                                    <input type="text" class="form-control" th:id="'username' + ${user.id}" th:value="${user.username}" name="username" />
+                                </div>
+                                <div class="form-group text-center">
+                                    <label th:attr="for='firstName' + ${user.id}" class="control-label font-weight-bold">First Name</label>
+                                    <input type="text" class="form-control" th:id="'firstName' + ${user.id}" th:value="${user.firstName}" name="firstName" />
+                                </div>
+                                <div class="form-group text-center">
+                                    <label th:attr="for='lastName' + ${user.id}" class="control-label font-weight-bold">Last Name</label>
+                                    <input type="text" class="form-control" th:id="'lastName' + ${user.id}" th:value="${user.lastName}" name="lastName" />
+                                </div>
+                                <div class="form-group text-center">
+                                    <label th:attr="for='age' + ${user.id}" class="control-label font-weight-bold">Age</label>
+                                    <input type="number" class="form-control" th:id="'age' + ${user.id}" th:value="${user.age}" name="age" />
+                                </div>
+                                <div class="form-group text-center">
+                                    <label th:attr="for='email' + ${user.id}" class="control-label font-weight-bold">Email</label>
+                                    <input type="email" class="form-control" th:id="'email' + ${user.id}" th:value="${user.email}" name="email" />
+                                </div>
+                                <div class="form-group text-center">
+                                    <label th:attr="for='password' + ${user.id}" class="control-label font-weight-bold">Password</label>
+                                    <input type="password" class="form-control" th:id="'password' + ${user.id}" th:value="${user.password}" name="password" />
+                                </div>
+                                <div class="form-group text-center">
+                                    <label th:attr="for='enabled' + ${user.id}" class="control-label font-weight-bold">Enabled</label>
+                                    <select class="form-control" th:id="'enabled' + ${user.id}" name="enabled">
+                                        <option value="true" th:selected="${user.enabled} == true">Enabled</option>
+                                        <option value="false" th:selected="${user.enabled} == false">Disabled</option>
+                                    </select>
+                                </div>
+                                <div class="form-group text-center">
+                                    <label th:attr="for='roles' + ${user.id}" class="control-label font-weight-bold">Roles</label>
+                                    <select class="form-control" th:id="'roles' + ${user.id}" name="roleIds" multiple>
+                                        <option th:each="role : ${allRoles}"
+                                                th:value="${role.id}"
+                                                th:text="${role.name}"
+                                                th:selected="${user.roles.contains(role)}">
+                                        </option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-primary">Save changes</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div th:each="user : ${allUser}">
+    <!-- Модальное окно для Delete -->
+    <div th:id="'deleteModal' + ${user.id}" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-md" role="document">
+            <div class="modal-content">
+                <div class="modal-header d-flex justify-content-between">
+                    <h4 class="modal-title">Delete User</h4>
+                    <button type="button" class="close btn-close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Are you sure you want to delete this user?</p>
+                    <div class="row">
+                        <div class="col-md-8 mx-auto">
+                            <div class="form-group text-center">
+                                <label th:attr="for='id' + ${user.id}" class="control-label font-weight-bold">ID</label>
+                                <input type="text" class="form-control" th:id="'id' + ${user.id}" th:value="${user.id}" name="id" readonly />
+                            </div>
+                            <div class="form-group text-center">
+                                <label th:attr="for='username' + ${user.id}" class="control-label font-weight-bold">Username</label>
+                                <input type="text" class="form-control" th:id="'username' + ${user.id}" th:value="${user.username}" name="username" readonly />
+                            </div>
+                            <div class="form-group text-center">
+                                <label th:attr="for='firstName' + ${user.id}" class="control-label font-weight-bold">First Name</label>
+                                <input type="text" class="form-control" th:id="'firstName' + ${user.id}" th:value="${user.firstName}" name="firstName" readonly />
+                            </div>
+                            <div class="form-group text-center">
+                                <label th:attr="for='lastName' + ${user.id}" class="control-label font-weight-bold">Last Name</label>
+                                <input type="text" class="form-control" th:id="'lastName' + ${user.id}" th:value="${user.lastName}" name="lastName" readonly />
+                            </div>
+                            <div class="form-group text-center">
+                                <label th:attr="for='age' + ${user.id}" class="control-label font-weight-bold">Age</label>
+                                <input type="number" class="form-control" th:id="'age' + ${user.id}" th:value="${user.age}" name="age" readonly />
+                            </div>
+                            <div class="form-group text-center">
+                                <label th:attr="for='email' + ${user.id}" class="control-label font-weight-bold">Email</label>
+                                <input type="email" class="form-control" th:id="'email' + ${user.id}" th:value="${user.email}" name="email" readonly />
+                            </div>
+                            <div class="form-group text-center">
+                                <label th:attr="for='roles' + ${user.id}" class="control-label font-weight-bold">Roles</label>
+                                <select class="form-control" th:id="'roles' + ${user.id}" name="roles" multiple disabled>
+                                    <option th:each="role : ${user.roles}" th:text="${role.name}"></option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <form th:action="@{/admin/deleteUser}" method="post">
+                        <input type="hidden" name="id" th:value="${user.id}" />
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Подключение jQuery -->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<!-- Подключение Popper.js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<!-- Подключение Bootstrap JS -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 </body>
 </html>
